[package]
description = "This is an experimental version of ANNIS corpus search frontend."
edition = "2021"
homepage = "https://github.com/korpling/annis-web/"
license = "Apache-2.0"
name = "annis-web"
repository = "https://github.com/korpling/annis-web/"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.6.1", features = ["headers"]}
base64 = "0.21.4"
bimap = "0.6.3"
chrono = "0.4.30"
clap = {version = "4.3.21", features = ["derive", "env"]}

csv = "1.1"
dashmap = "5.5.0"
futures = "0.3"
graphannis = "2"
graphannis-core = "2.4.7"
include_dir = "0.7"
mime_guess = "2"
minijinja = {version = "1.0.6", features = ["builtins", "loader"]}
oauth2 = "4.4.1"
percent-encoding = "2.2.0"
reqwest = {version = "0.11", features = ["json", "stream"]}
serde = "1"
serde_json = "1"
serde_with = "3.4.0"
sqlx-core = "0.7"
tempfile = "3"
thiserror = "1"
time = "0.3.30"
tokio = {version = "1.17.0", features = ["rt-multi-thread", "macros"]}
tokio-util = "0.7.4"
tower = {version = "0.4", features = ["util"]}
tower-sessions = {version = "0.3.3", features = ["sqlite-store", "tokio-rt"]}
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
transient-btree-index = "0.5.0"
url = "2.3"

[dev-dependencies]
cookie = {version = "0.18.0", features = ["signed"]}
criterion = {version = "0.5", features = ["html_reports", "async_tokio"]}
dirs = "5"
env_logger = "0.10"
fantoccini = "0.19"
hyper = {version = "0.14", default-features = false}
insta = "1.31.0"
mockito = "1"
pretty_assertions = "1"
scraper = "0.16"
serde_json = "1"
test-log = "0.2"

[profile.dev.package]
graphannis-core.opt-level = 3
graphannis.opt-level = 3
insta.opt-level = 3

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[[bench]]
harness = false
name = "csv_export"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.3.1"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.67.1"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"

[package.metadata.cargo-machete]
ignored = ["env_logger"]
